Fix overflow problem

--- a/client/app/styles/app.styl
+++ b/client/app/styles/app.styl
@@ -15,3 +15,4 @@
 
     [role=contentinfo]
         background-color white
+        overflow-x auto!important
