--- a/client/app/styles/menu.styl
+++ b/client/app/styles/menu.styl
@@ -1,5 +1,6 @@
 [role=application]
     > aside
+        overflow-y auto
         padded()
         background-color grey-01
         border-right 1px solid grey-03
